--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.56.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.47"
   },
   "dependencies": {
     "sass": "^1.79.4"
